plugins {
    id "java"
    id "application"
    id "com.github.johnrengelman.shadow" version '8.1.1'
}

group = "wtf.triplapeeck"
version = "alpha-1"
mainClassName = "wtf.triplapeeck.sinon.Main"

repositories {
    mavenCentral()
}

jar {
    manifest {
        attributes(
            "Main-Class": mainClassName
        )
    }
}

shadowJar {
    archiveFileName = "sinon.jar"
}

dependencies {
    implementation 'org.reflections:reflections:0.10.2'
    implementation "net.dv8tion:JDA:5.0.0-beta.22"
    implementation "com.google.code.gson:gson:2.8.9"
    implementation "com.j256.ormlite:ormlite-core:6.1"
    implementation "com.j256.ormlite:ormlite-jdbc:6.1"
    implementation "org.mariadb.jdbc:mariadb-java-client:3.1.3"
}

compileJava {
    options.encoding = "UTF-8"
}

sourceCompatibility = 21
targetCompatibility = 21
